# HTTP-Request-Client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Basket.h  BrowserHandler.h  Common.h  Compat.h  CompressHandler.h  Error.h  File.h  Http2Client.h  Log.h  RequestHandler.h  ResponseHandler.h  SSLHandler.h  Session.h  SocketHandler.h  UrlParser.h
java/: Example.java  Http2Client.c  Http2Client.java  Http2Client_jni.h  README.md  Test.java  build.sh  com_http2client_Http2Client.h  dependency-reduced-pom.xml  pom.xml
nodejs/: README.MD  binding.gyp  build-addon.js  build.sh  example.js  http2-addon.cc  index.d.ts  index.js  package-lock.json  package.json  test.js
python/: README.md  __init__.py  __init__.pyi  build.sh  example.py  http2_client.py  setup.py  test.py
src/: Basket.c  BrowserHandler.c  CMakeLists.static.txt  CMakeLists.txt  CMakelists.test.txt  CMakelists.txt  CompressHandler.c  Http2Client.c  RequestHandler.c  ResponseHandler.c  SSLHandler.c  Session.c  SocketHandler.c
src/config/: zlog.conf
src/utils/: Common.c  Error.c  File.c  Log.c  UrlParser.c
tests/: CMakeLists.txt  CMakelists.txt  request_GET.json  request_POST.json  test_GET.c  test_POST.c
tests/nodejs/: testC.js
